# humanoid-walker-gui

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  matlab_worker.py
matlab_bridge/: gui_run_ga.m  gui_run_rl.m
tests/: test_worker.py
